# MacroKeyboard

./: .gitignore  README.md
Firmware/MacroKeyboard V0.1/: STM32F1.uvguix.Jackie  STM32F1.uvoptx
Firmware/MacroKeyboard V0.1 TestVersion/: STM32F1.uvguix.Jackie  STM32F1.uvprojx
Firmware/MacroKeyboard_V0.2/: .cproject  .mxproject  .project  CMakeLists.txt  MacroKeyboard_V0.2.ioc  MacroKeyboard_V0.2.xml
Software/KeyboardFactory/: CMakeLists.txt  main.cpp
Software/KeyboardFactory/Components/Inc/: TabWidget.h  TopPanel.h
Software/KeyboardFactory/Components/Src/: MainWindow.cpp  TabWidget.cpp  TopPanel.cpp
Software/KeyboardFactory/Design/: MacroFactory V0.1.ui
Software/KeyboardFactory/components/inc/: InfoPanel.h  InfoTab.h  MainWindow.h  SettingTab.h  TabWidget.h  TestTab.h  TopPanel.h  TransferTab.h
Software/KeyboardFactory/components/src/: InfoPanel.cpp  InfoTab.cpp  MainWindow.cpp  SettingTab.cpp  TabWidget.cpp  TestTab.cpp  TopPanel.cpp  TransferTab.cpp
Software/KeyboardFactory/design/: MacroFactory V0.1.ui
Software/KeyboardFactory/hid/inc/: HidReceiveThread.h  HidScanDevThread.h  HidService.h
Software/KeyboardFactory/hid/src/: HidReceiveThread.cpp  HidScanDevThread.cpp  HidService.cpp
Software/KeyboardFactory/keyboard/inc/: KeyService.h
Software/KeyboardFactory/keyboard/src/: KeyService.cpp
Software/KeyboardFactory/lib/hidapi/inc/: HIDDevInterface.h  HIDUtil.h
Software/KeyboardFactory/lib/hidapi/src/: HIDDevInterface.cpp  HIDUtil.cpp
Software/KeyboardFactory/model/inc/: KeyMapList.h  Product.h  UserConf.h  VirtualKeyList.h
Software/KeyboardFactory/model/src/: KeyMapList.cpp  Product.cpp  UserConf.cpp  VirtualKeyList.cpp
Software/KeyboardFactory/service/inc/: BrightnessService.h  HIDService.h  KeyService.h  SoundService.h
Software/KeyboardFactory/service/src/: BrightnessService.cpp  HIDService.cpp  KeyService.cpp  SoundService.cpp
Software/KeyboardFactory/util/inc/: GlobalData.h  GlobalEvent.h  IniHandler.h
Software/KeyboardFactory/util/src/: GlobalData.cpp  GlobalEvent.cpp  IniHandler.cpp
(+58 files in other folders)
